fix nav overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -296,7 +296,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   line-height: 1.7;
-  font-size: 1rem;
+  font-size: 1.125rem;
 }
 
 h1,
